--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -4,7 +4,7 @@
     margin: 5px;
     margin-top: 25px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #d7d7d7;
     border: 1px solid #ccc;
   }
   
